change app selector label

--- a/hello-server/rollout/service.yaml
+++ b/hello-server/rollout/service.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: helloservice
+    app: helloservice-rollout
   ports:
   - name: http
     port: 9000
