cleanup and fixed typo

--- a/hello-server/rollout/templates/rollout.yaml
+++ b/hello-server/rollout/templates/rollout.yaml
@@ -12,7 +12,7 @@ spec:
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: {{ template "helloservice-demo" . }}
+      app: {{ template "helloservice-demo.name" . }}
       release: {{ .Release.Name }}
   strategy:
     blueGreen:
