--- a/hello-server/rollout/values.yaml
+++ b/hello-server/rollout/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: aloisreitbauer/hello-server
-  tag: 0.1.0
+  tag: v0.1.0
   pullPolicy: IfNotPresent
 
 service:
