don't write yaml on Sundays :(

--- a/hello-server/rollout/templates/rollout.yaml
+++ b/hello-server/rollout/templates/rollout.yaml
@@ -15,7 +15,7 @@ spec:
       app: {{ template "helloservice-demo.name" . }}
       release: {{ .Release.Name }}
   strategy:
-     carnary:
+     canary:
     #blueGreen:
       # activeService: {{ template "helloservice-demo.fullname" . }}
       # previewService: {{ template "helloservice-demo.fullname" . }}-preview
