--- a/hello-server/rollout/values.yaml
+++ b/hello-server/rollout/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 5
 image:
   repository: aloisreitbauer/hello-server
   tag: v0.1.0
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 service:
   type: ClusterIP
