always pull images

--- a/delivery/manifest/manifest.yaml
+++ b/delivery/manifest/manifest.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: server
         image: aloisreitbauer/hello-server:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 9000
         env:
