deleted trailing characters.

--- a/delivery/keptn/shipyard.yaml
+++ b/delivery/keptn/shipyard.yaml
@@ -12,4 +12,4 @@ stages:
     approval_strategy:
       pass: "manual"
       warning: "manual"
-    deployment_strategy: "blue_green_service" q q
+    deployment_strategy: "blue_green_service"
