--- a/delivery/keptn/shipyard.yaml
+++ b/delivery/keptn/shipyard.yaml
@@ -1,12 +1,12 @@
 stages:
   - name: "dev"
     approval_strategy:
-      pass: "manual"
-      warning: "manual"
+      pass: "automatic"
+      warning: "automatic"
   - name: "staging"
     approval_strategy:
-      pass: "manual"
-      warning: "manual"
+      pass: "automatic"
+      warning: "automatic"
     deployment_strategy: "blue_green_service"
   - name: "production"
     approval_strategy:
