adjusted build process

--- a/hello-server/DockerfileV0.1.1
+++ b/hello-server/DockerfileV0.1.1
@@ -36,4 +36,4 @@ COPY --from=builder /dist/helloserver /
 EXPOSE 9000
 
 # Command to run when starting the container
-CMD ["/helloserver"]
+CMD ["/helloserver". "0.1.1"]
