--- a/hello-server/DockerfileV0.1.2
+++ b/hello-server/DockerfileV0.1.2
@@ -32,6 +32,7 @@ FROM scratch
 
 COPY --from=builder /dist/helloserver /
 COPY ./static  /static
+COPY ./overview.html  /overview.html
 
 # Export necessary port
 EXPOSE 9000
