--- a/hello-server/DockerfileV0.1.1
+++ b/hello-server/DockerfileV0.1.1
@@ -38,4 +38,4 @@ COPY ./overview.html  /overview.html
 EXPOSE 9000
 
 # Command to run when starting the container
-CMD ["/helloserver". "0.1.1"]
+CMD ["/helloserver", "0.1.1"]
