--- a/delivery/manifest/manifest.yaml
+++ b/delivery/manifest/manifest.yaml
@@ -1,3 +1,9 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: demospace
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,7 +21,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: aloisreitbauer/hello-server:v0.1.2
+        image: aloisreitbauer/hello-server:v0.1.1
         imagePullPolicy: Always
         ports:
         - containerPort: 9000
