use project name variable for creation

--- a/delivery/keptn/helm-charts/helloserver/templates/deployment.yaml
+++ b/delivery/keptn/helm-charts/helloserver/templates/deployment.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: server
         image: {{ .Values.image}}
+        imagePullPolicy: Always
         ports:
         - containerPort: 9000
         env:
