--- a/delivery/charts/hello-server/values.yaml
+++ b/delivery/charts/hello-server/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: aloisreitbauer/hello-server
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "v0.1.0"
 
 imagePullSecrets: []
 nameOverride: ""
