adding replicas by referencing the values.yaml

--- a/delivery/keptn/helm-charts/helloserver/templates/deployment.yaml
+++ b/delivery/keptn/helm-charts/helloserver/templates/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: helloservice
   namespace: {{ .Release.Namespace }} 
 spec:
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: helloservice
