--- a/delivery/manifest/manifest.yaml
+++ b/delivery/manifest/manifest.yaml
@@ -21,7 +21,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: aloisreitbauer/hello-server:v0.1.1
+        image: ghcr.io/podtato-head/hello-server:v0.1.1
         imagePullPolicy: Always
         ports:
         - containerPort: 9000
