--- a/delivery/CNABwithPorter/manifests/manifest.yaml
+++ b/delivery/CNABwithPorter/manifests/manifest.yaml
@@ -20,7 +20,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: aloisreitbauer/hello-server:latest
+        image: ghcr.io/podtato-head/hello-server:v0.1.1
         imagePullPolicy: Always
         ports:
         - containerPort: 9000
