--- a/delivery/KubeVela/vela.yaml
+++ b/delivery/KubeVela/vela.yaml
@@ -2,7 +2,7 @@ name: helloservice
 
 services:
   server:
-    image: aloisreitbauer/hello-server:v0.1.1
+    image: ghcr.io/podtato-head/hello-server:v0.1.1
     port: 9000
     route:
       domain: example.com
