--- a/delivery/charts/hello-server/values.yaml
+++ b/delivery/charts/hello-server/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: aloisreitbauer/hello-server
+  repository: ghcr.io/podtato-head/hello-server
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "v0.1.0"
