--- a/.github/workflows/buildcontainers.yml
+++ b/.github/workflows/buildcontainers.yml
@@ -27,7 +27,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: |
+          cd hello-server,
+          ./buildPush.sh
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
