--- a/.github/workflows/buildcontainers.yml
+++ b/.github/workflows/buildcontainers.yml
@@ -28,7 +28,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          cd hello-server,
+          cd hello-server
           ./buildPush.sh
 
       # Runs a set of commands using the runners shell
