--- a/.github/workflows/buildcontainers.yml
+++ b/.github/workflows/buildcontainers.yml
@@ -7,8 +7,6 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -33,8 +31,8 @@ jobs:
           password: ${{ secrets.CR_PAT }}  
         
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
+      # Run script to build all container images
+      - name: Create container images
         run: |
           cd hello-server
           ./buildPush.sh
