--- a/delivery/kustomize/base/deployment.yaml
+++ b/delivery/kustomize/base/deployment.yaml
@@ -14,7 +14,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: aloisreitbauer/hello-server:v0.1.0
+        image: ghcr.io/podtato-head/hello-server:v0.1.1
         imagePullPolicy: Always
         ports:
         - containerPort: 9000
