--- a/delivery/kustomize/overlays/staging/patch.yaml
+++ b/delivery/kustomize/overlays/staging/patch.yaml
@@ -8,4 +8,4 @@ spec:
     spec:
       containers:
       - name: server
-        image: aloisreitbauer/helloservice:v0.1.1
+        image: ghcr.io/podtato-head/hello-server:v0.1.1
