--- a/delivery/hello-operator/config/crd/bases/helloservice-demo.helloservice_helloservers.yaml
+++ b/delivery/hello-operator/config/crd/bases/helloservice-demo.helloservice_helloservers.yaml
@@ -2,20 +2,20 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: helloservers.helloservice-demo.helloservice
+  name: podtatoservers.helloservice-demo.helloservice
 spec:
   group: helloservice-demo.helloservice
   names:
-    kind: Helloserver
-    listKind: HelloserverList
-    plural: helloservers
-    singular: helloserver
+    kind: podtatoserver
+    listKind: podtatoserverList
+    plural: podtatoservers
+    singular: podtatoserver
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Helloserver is the Schema for the helloservers API
+        description: podtatoserver is the Schema for the podtatoservers API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -30,11 +30,11 @@ spec:
           metadata:
             type: object
           spec:
-            description: Spec defines the desired state of Helloserver
+            description: Spec defines the desired state of podtatoserver
             type: object
             x-kubernetes-preserve-unknown-fields: true
           status:
-            description: Status defines the observed state of Helloserver
+            description: Status defines the observed state of podtatoserver
             type: object
             x-kubernetes-preserve-unknown-fields: true
         type: object
