--- a/delivery/rollout/Chart.yaml
+++ b/delivery/rollout/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: helloserver-demo
+name: podtatoserver-demo
 description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
