--- a/delivery/gimlet/production.yaml
+++ b/delivery/gimlet/production.yaml
@@ -2,7 +2,7 @@ app: podtato-head
 env: staging
 namespace: staging
 chart:
-  name: ../charts/hello-server
+  name: ../charts/podtatoserver
   version: 0.1.0
 values:
   replicaCount: 2
