--- a/delivery/charts/hello-server/templates/service.yaml
+++ b/delivery/charts/hello-server/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "hello-server.fullname" . }}
+  name: {{ include "podtatoserver.fullname" . }}
   labels:
-    {{- include "hello-server.labels" . | nindent 4 }}
+    {{- include "podtatoserver.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "hello-server.selectorLabels" . | nindent 4 }}
+    {{- include "podtatoserver.selectorLabels" . | nindent 4 }}
