--- a/delivery/charts/hello-server/templates/tests/test-connection.yaml
+++ b/delivery/charts/hello-server/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "hello-server.fullname" . }}-test-connection"
+  name: "{{ include "podtatoserver.fullname" . }}-test-connection"
   labels:
-    {{- include "hello-server.labels" . | nindent 4 }}
+    {{- include "podtatoserver.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "hello-server.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "podtatoserver.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
