--- a/delivery/charts/hello-server/values.yaml
+++ b/delivery/charts/hello-server/values.yaml
@@ -1,11 +1,11 @@
-# Default values for hello-server.
+# Default values for podtatoserver.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: ghcr.io/podtato-head/hello-server
+  repository: ghcr.io/podtato-head/podtatoserver
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "v0.1.0"
