--- a/delivery/hello-operator/config/samples/helloservice-demo_v1alpha1_helloserver.yaml
+++ b/delivery/hello-operator/config/samples/helloservice-demo_v1alpha1_helloserver.yaml
@@ -4,6 +4,6 @@ metadata:
   name: podtatoserver-sample
 spec:
   # Default values copied from <project_dir>/helm-charts/podtatoserver/values.yaml
-  imageName: aloisreitbauer/podtatoserver:v0.1.1
+  imageName: ghcr.io/podtato-head/podtatoserver:v0.1.1
   
   
