--- a/delivery/keptn/shipyard.yaml
+++ b/delivery/keptn/shipyard.yaml
@@ -1,12 +1,28 @@
-stages:
-  - name: "hardening"
-    approval_strategy:
-      pass: "automatic"
-      warning: "automatic"
-    deployment_strategy: "blue_green_service"
-    test_strategy: "performance"
-  - name: "production"
-    approval_strategy:
-      pass: "automatic"
-      warning: "manual"
-    deployment_strategy: "blue_green_service"
+apiVersion: "spec.keptn.sh/0.2.0"
+kind: "Shipyard"
+metadata:
+  name: "shipyard-sockshop"
+spec:
+  stages:
+    - name: "hardening"
+      sequences:
+        - name: "artifact-delivery"
+          tasks:
+            - name: "deployment"
+              properties:
+                deploymentstrategy: "blue_green_service"
+            - name: "test"
+              properties:
+                teststrategy: "performance"
+            - name: "evaluation"
+            - name: "release"
+    - name: "production"
+      sequences:
+        - name: "artifact-delivery"
+          triggers:
+            - "hardening.artifact-delivery.finished"
+          tasks:
+            - name: "deployment"
+              properties:
+                deploymentstrategy: "blue_green_service"
+            - name: "release"
