--- a/delivery/keptn/helm-charts/helloserver/templates/service.yaml
+++ b/delivery/keptn/helm-charts/helloserver/templates/service.yaml
@@ -8,7 +8,7 @@ spec:
     app: helloservice
   ports:
   - name: http
-    port: 9000
+    port: 80
     protocol: TCP
     targetPort: 9000
-  type: LoadBalancer
+  type: ClusterIP
