--- a/podtato-server/DockerfileV0.1.1
+++ b/podtato-server/DockerfileV0.1.1
@@ -37,4 +37,4 @@ COPY ./podtato-new.html  /podtato-new.html
 EXPOSE 9000
 
 # Command to run when starting the container
-CMD ["/podtatoserver", "0.1.1"]
+CMD ["/podtatoserver", "--version", "0.1.1", "--podtatoId", "01" ]
