--- a/.github/workflows/buildcontainers.yml
+++ b/.github/workflows/buildcontainers.yml
@@ -35,4 +35,5 @@ jobs:
       - name: Create container images
         run: |
           cd podtato-server
+          cat ./scripts/buildPush.sh
           ./scripts/buildPush.sh
