moved the static path in the dockerfile for building

--- a/.github/workflows/buildcontainers.yml
+++ b/.github/workflows/buildcontainers.yml
@@ -34,4 +34,5 @@ jobs:
       # Run script to build all container images
       - name: Create container images
         run: |
-          cd podtato-server && ./scripts/buildPush.sh
+          cd podtato-server
+          ./scripts/buildPush.sh
