(chore)helloservice: add label to the kubernetes service for podtato-head app
Signed-off-by: ksatchit <karthik@chaosnative.com>

--- a/delivery/manifest/manifest.yaml
+++ b/delivery/manifest/manifest.yaml
@@ -35,6 +35,8 @@ kind: Service
 metadata:
   name: helloservice
   namespace: demospace
+  labels: 
+    app: helloservice
 spec:
   selector:
     app: helloservice
